--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -8,7 +8,7 @@
 }
 
 
-/* Spacing between entries in the developper API documentation */
+/* Spacing between entries in the developer API documentation */
 dl{
     margin: 50px 0;
 }
